[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
authors = ["Bujosa <davidbujosa@gmail.com.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
crate_type = ["proc-macro"]


[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"